--- a/FightAcademy/FightAcademy/Views/TableCell/ActivityCell/ChoosingActivityTableViewCell.xib
+++ b/FightAcademy/FightAcademy/Views/TableCell/ActivityCell/ChoosingActivityTableViewCell.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -12,15 +13,15 @@
         <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="72" id="KGk-i7-Jjw" customClass="ChoosingActivityTableViewCell" customModule="FightAcademy" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="72"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="72"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zo9-Jn-1a8">
-                        <rect key="frame" x="8" y="8" width="304" height="55"/>
+                        <rect key="frame" x="8" y="8" width="304" height="64"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Boxing for kids" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XzJ-Ad-Sad">
-                                <rect key="frame" x="12" y="15.5" width="135.5" height="24"/>
+                                <rect key="frame" x="12" y="20" width="135.5" height="24"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -47,7 +48,7 @@
                             <constraint firstItem="B2S-9R-Jae" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="XzJ-Ad-Sad" secondAttribute="trailing" constant="8" id="fA7-Xt-Pi1"/>
                             <constraint firstItem="XzJ-Ad-Sad" firstAttribute="leading" secondItem="zo9-Jn-1a8" secondAttribute="leading" constant="12" id="j69-WD-rEO"/>
                             <constraint firstAttribute="trailing" secondItem="8VJ-Fx-DLS" secondAttribute="trailing" constant="8" id="jLO-mc-d1b"/>
-                            <constraint firstAttribute="height" constant="55" id="rbg-wb-AXF"/>
+                            <constraint firstAttribute="height" priority="999" constant="55" id="rbg-wb-AXF"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
