--- a/FightAcademy/FightAcademy/Views/TableCell/ChooseCoachCell/ChoosingCoachTableViewCell.xib
+++ b/FightAcademy/FightAcademy/Views/TableCell/ChooseCoachCell/ChoosingCoachTableViewCell.xib
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="113" id="KGk-i7-Jjw" customClass="ChoosingCoachTableViewCell" customModule="FightAcademy" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="KGk-i7-Jjw" customClass="ChoosingCoachTableViewCell" customModule="FightAcademy" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="113"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="113"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jCq-gc-CkF">
-                        <rect key="frame" x="8" y="8" width="304" height="100"/>
+                        <rect key="frame" x="8" y="8" width="304" height="105"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="testAvatarImage" translatesAutoresizingMaskIntoConstraints="NO" id="buW-87-aT7">
-                                <rect key="frame" x="10" y="10" width="80" height="80"/>
+                                <rect key="frame" x="10" y="10" width="80" height="85"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="80" id="ds2-x5-XsF"/>
+                                    <constraint firstAttribute="height" priority="999" constant="80" id="ds2-x5-XsF"/>
                                     <constraint firstAttribute="width" constant="80" id="o4U-zA-cWH"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
@@ -57,7 +58,7 @@
                             <constraint firstItem="4TP-6o-zlS" firstAttribute="leading" secondItem="buW-87-aT7" secondAttribute="trailing" constant="16" id="N3g-gG-k5n"/>
                             <constraint firstAttribute="bottom" secondItem="buW-87-aT7" secondAttribute="bottom" constant="10" id="ND5-6q-tdM"/>
                             <constraint firstItem="buW-87-aT7" firstAttribute="leading" secondItem="jCq-gc-CkF" secondAttribute="leading" constant="10" id="RBN-89-4dj"/>
-                            <constraint firstAttribute="height" constant="100" id="eA0-9F-82L"/>
+                            <constraint firstAttribute="height" priority="999" constant="100" id="eA0-9F-82L"/>
                             <constraint firstItem="buW-87-aT7" firstAttribute="top" secondItem="jCq-gc-CkF" secondAttribute="top" constant="10" id="h1O-EH-b8c"/>
                             <constraint firstItem="jcz-ol-PsA" firstAttribute="top" secondItem="4TP-6o-zlS" secondAttribute="bottom" constant="6" id="mfC-ju-ekl"/>
                             <constraint firstItem="jcz-ol-PsA" firstAttribute="leading" secondItem="buW-87-aT7" secondAttribute="trailing" constant="16" id="rkV-Rp-Cgd"/>
